style paper-item-icon element

--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,11 @@
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
     "working-abroad-page": "PaulMatencio/working-abroad",
     "paper-slider": "^2.0.2",
-    "vaadin-combo-box": "vaadin/vaadin-combo-box#^2.0.0"
+    "vaadin-combo-box": "vaadin/vaadin-combo-box#^2.0.0",
+    "iron-icons": "^2.0.1",
+    "iron-icon": "^2.0.1",
+    "paper-input": "^2.0.2",
+    "paper-item": "^2.0.0"
   },
   "resolutions": {
     "polymer": "^2.0.0"
